Change course information on Redesign Staging page. Change class location and maps links on Directions page. Change class names on Payment page.

--- a/www/directions-school-redesign-staging.htm
+++ b/www/directions-school-redesign-staging.htm
@@ -94,19 +94,15 @@
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
           <h1 align="center"> Directions to the School of Interior Redesign</h1>
-          <p align="left">All classes are held just off
-            the Green in beautiful Milford, CT at Milford Office Suites, 58 River
-            Street. </p>
-          <p align="left">Click any of the links below for driving
-            directions from the online map service of your choice: </p>
+          <p align="left">All classes are held just off the Green in beautiful Milford, CT at The Shoreline Professional Building, located at 26 Broad Street. </p>
+          <p align="left">Click any of the links below for driving directions from the online map service of your choice: </p>
           <ul>
             <ul>
               <ul>
                 <ul>
-                  <li><a href="http://maps.google.com/maps?f=q&amp;hl=en&amp;q=58+River+Street,+Milford,+CT+06460&amp;sll=37.0625,-95.677071&amp;sspn=45.553578,77.34375&amp;ie=UTF8&amp;ll=41.228217,-73.057408&amp;spn=0.010619,0.018883&amp;z=15&amp;om=1" target="_blank" align="left">Google
-                    Maps </a> </li>
-                  <li><a href="http://maps.yahoo.com/#mvt=m&amp;q1=58%20River%20Street,%20Milford,%20CT%2006460&amp;trf=0&amp;lon=-73.057258&amp;lat=41.223989&amp;mag=3" target="_blank">Yahoo Maps </a></li>
-                  <li><a href="http://www.mapquest.com/maps/map.adp?searchtype=address&amp;country=US&amp;addtohistory=&amp;searchtab=home&amp;formtype=address&amp;popflag=0&amp;latitude=&amp;longitude=&amp;name=&amp;phone=&amp;level=&amp;cat=&amp;address=58+River+Street&amp;city=Milford&amp;state=CT&amp;zipcode=06460" target="_blank">Mapquest</a></li>
+                  <li><a href="https://goo.gl/maps/PHePiPoNRST2" target="_blank" align="left">Google Maps </a> </li>
+                  <li><a href="https://maps.yahoo.com/place/?lat=41.221774289887534&lon=-73.0570650100708&q=26%20Broad%20Street%20Milford%2C%20CT&bb=41.22217576%2C-73.057869%2C41.22137281%2C-73.05626236&addr=Lockport%2C%20NY%2014094" target="_blank">Yahoo Maps </a></li>
+                  <li><a href="http://mapq.st/2ACB4dE" target="_blank">Mapquest</a></li>
                 </ul>
               </ul>
             </ul>
