--- a/www/register-redesign-staging-class.htm
+++ b/www/register-redesign-staging-class.htm
@@ -161,20 +161,16 @@
                           <label>Interior Redesign/Staging Intensive (5 Days)</label>
                         </li>
                         <li>
-                          <input name="course" type="checkbox" value="Real Estate Staging for the Professional (1 Day )"/>
-                          <label>Real Estate Staging for the Professional (1 Day)</label>
-                        </li>
-                        <li>
-                          <input name="course" type="checkbox" value="Real Estate Staging for the Professional (1.5 Days)" />
-                          <label>Real Estate Staging for the Professional (1 1/2 Days)</label>
-                        </li>
-                        <li>
                           <input name="course" type="checkbox" value="Real Estate Staging for the Professional (2 Days)" />
-                          <label>Real Estate Staging for the Professional (2-Days)</label>
+                          <label>Real Estate Staging for the Professional (2 Days)</label>
                         </li>
                         <li>
-                          <input name="course" type="checkbox" value="Real Estate Staging Intensive Training (2.5 Days)" />
-                          <label>Real Estate Staging Intensive Training (2 1/2-Days)</label>
+                          <input name="course" type="checkbox" value="Real Estate Staging for the Professional (2.5 Days)" />
+                          <label>Real Estate Staging for the Professional (2-1/2 Days)</label>
+                        </li>
+                        <li>
+                          <input name="course" type="checkbox" value="Real Estate Staging Intensive Training (3 Days)" />
+                          <label>Real Estate Staging Intensive Training (3 Days)</label>
                         </li>
                         <li>
                           <input name="course" type="checkbox" value="Introduction to Interior Decorating (1 Day)" />
