--- a/www/feng-shui-business.htm
+++ b/www/feng-shui-business.htm
@@ -53,84 +53,67 @@
           <td height="28" colspan="4"><img src="images/address_school_of_interior_redesign.jpg" height="13" border="0" usemap="#Map" /></td>
         </tr>
         <tr>
-          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" -->
-            <ul class="navbar">
-              <li><a href="index.htm">Home Page</a></li>
-              <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
-              <li><span class="node">Classes</span>
-                <ul>
-                  <li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
-                    <ul>
-                      <li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
-                      <li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
-                      <li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
-                    <ul>
-                      <li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
-                      <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
-                    <ul>
-                      <li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                      <li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
-                    </ul>
-                  </li>
+          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" --><ul class="navbar">
+          	<li><a href="index.htm">Home Page</a></li>
+<!--            <li><a href="../questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>-->
+            <li><span class="node">Classes</span> 
+            	<ul>
+					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
+                    	<ul>
+                        	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
+                        	<li><a href="interior-redesign-professional.htm">Redesign Intensive</a></li>
+                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    	<ul>
+<!--                        	<li><a href="../real-estate-staging-professional.htm">Staging for the Professional</a></li>-->
+                            <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    	<ul>
+                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
+                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional&reg;</a></li>
+                    	</ul>
+                    </li>
+					<li><a href="business-of-design.htm">The Business of Design</a>
+						<ul>
+						  <li><a href="starting-your-design-related-business.htm.html">Starting Your Design-Related Business</a></li>
+							<li><a href="marketing-your-design-related-business.htm">Marketing Your Design-Related Business</a></li>
+						</ul>
+					</li>
                 </ul>
-              </li>
-              <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
-              <li><a href="course-schedule.htm">Class Schedule</a></li>
-              <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
-              <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
-              <li><a href="payment.htm">Secure Online Payment</a></li>
-              <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
-              <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
-              <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-            </ul>
-          <!-- #EndLibraryItem --></td>
+            </li>
+            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+            <li><a href="course-schedule.htm">Class Schedule</a></li>
+<!--            <li><a href="../directions-school-redesign-staging.htm">Directions To The School</a></li>-->
+            <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
+            <li><a href="payment.htm">Secure Online Payment</a></li>
+            <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
+            <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
+            <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
+          </ul><!-- #EndLibraryItem --></td>
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
-            <h1 align="center"> Sky-Rocket Your Business with Feng Shui</h1>
-            <p class="course-description">A half-day class that focuses on the principles
-              of feng shui to exponentially increase your success in business!</p>
-            <p align="left">This half-day class provides <strong>any professional
-                business owner</strong> the <strong>skills that will set your
-                business apart from others</strong>!&nbsp; You
-              will receive clients that you never thought possible.&nbsp; You
-              will complete more work more efficiently and with less stress.&nbsp; You
-              will see a whole new world of opportunities appear right in front
-              of you!&nbsp; All you need to do is sign up for this <strong>fascinating</strong>              <strong>feng
-              shui</strong> <strong>class </strong>that will teach you how to
-              literally <strong>Sky-Rocket
+            <h1 align="center">Sky-Rocket Your Business with Feng Shui</h1>
+            <p class="course-description">A half-day class that focuses on the principles of feng shui to exponentially increase your success in business!</p>
+            <p align="left">This half-day class provides <strong>any professional business owner</strong> the <strong>skills that will set your business apart from others</strong>! You
+              will receive clients that you never thought possible. You will complete more work more efficiently and with less stress. You will see a whole new world of opportunities appear right in front of you! All you need to do is sign up for this <strong>fascinating feng shui class</strong> that will teach you how to literally <strong>Sky-Rocket
               your Business</strong>.</p>
-            <p align="left"><strong>During this feng shui workshop, you will
-                learn:</strong></p>
+            <p align="left"><strong>During this feng shui workshop, you will learn:</strong></p>
             <ul>
               <li>How to take command of your office or business</li>
-              <li>How to attract the appropriate helpful people into your business
-                network - clients, partners, employees</li>
+              <li>How to attract the appropriate helpful people into your business network - clients, partners, employees</li>
               <li>Specific items that will attract wealth into your business</li>
-              <li>Some of the common feng shui mistakes business owners are not
-                even aware of</li>
+              <li>Some of the common feng shui mistakes business owners are not even aware of</li>
             </ul>
             <h2>To Enroll in the Sky-Rocket Your Business with Feng Shui class:</h2>
-            <p><strong>Cost for the</strong> <strong>Sly-Rocket Your Business
-                with  Feng
-                Shui </strong>is
-              $250, which includes your Feng Shui Basic Principles materials,
-              a floor plan example and the feng shui map.</p>
+            <p><strong>Cost for the Sky-Rocket Your Business with Feng Shui</strong> is $250, which includes your Feng Shui Basic Principles materials, a floor plan example and the feng shui map.</p>
             <blockquote>
-              <p><strong>To see the schedule of Sky-Rocket Your Business with
-                  Feng Shui classes</strong>,
-                check the <a href="course-schedule.htm">Class Schedule</a> for
-                more information.&nbsp;</p>
-              <p>T<strong>o reserve your space in any feng shui</strong><strong> class</strong>,
-                complete the <a href="register-redesign-staging-class.htm">Application</a> and
-                submit, along with your <a href="payment.htm">deposit of $100</a>.&nbsp; The
-                balance is due two weeks prior to the start of class.</p>
+              <p><strong>To see the schedule of Sky-Rocket Your Business with Feng Shui classes</strong>, check the <a href="course-schedule.htm">Class Schedule</a> for more information.</p>
+              <p><strong>To reserve your space in any feng shui class</strong>, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit, along with your <a href="payment.htm">deposit of $100</a>. The balance is due two weeks prior to the start of class.</p>
             </blockquote>
           <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
           <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
@@ -152,49 +135,13 @@ email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorre
             </td>
         </tr>
         <tr>
-          <td colspan="4" class="footer"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" -->
-            <ul class="navbar">
-              <li><a href="index.htm">Home Page</a></li>
-              <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
-              <li><span class="node">Classes</span>
-                <ul>
-                  <li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
-                    <ul>
-                      <li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
-                      <li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
-                      <li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
-                    <ul>
-                      <li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
-                      <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
-                    <ul>
-                      <li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                      <li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
-              <li><a href="course-schedule.htm">Class Schedule</a></li>
-              <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
-              <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
-              <li><a href="payment.htm">Secure Online Payment</a></li>
-              <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
-              <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
-              <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-            </ul>
-          <!-- #EndLibraryItem -->            <div align="left"><a class="footer" href="#top">Return to top of page</a></div>
+          <td colspan="4" class="footer"><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
           </td>
         </tr>
       </table></td>
   </tr>
 </table>
-<p align="center" class="footer">Copyright &copy; 2004-2016 School of Interior Redesign, LLC.&nbsp; All rights reserved.<br />Website design by H.B. Moser, A Certified Internet Webmaster</p>
+<p align="center" class="footer">Copyright &copy; 2004-2019 School of Interior Redesign, LLC.&nbsp;All rights reserved.<br/></p>
 <map name="Map" id="Map">
   <area shape="rect" coords="411,0,625,14" href="mailto:info@schoolofinteriorredesign.com" />
 </map>
