--- a/www/starting-your-design-related-business.htm.html
+++ b/www/starting-your-design-related-business.htm.html
@@ -97,26 +97,29 @@
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
-            <p>Starting Your Design-Related Business<br />
-              a half-day workshop</p>
-            <p>Do you have the skills and passion necessary to begin your own business in interior decorating, or the fast-growing fields of interior redesign (also called one day decorating) or real estate staging (also called home staging), or any design-related business but you just aren&amp;#39;t sure how to do it? <br />
-               <br />
-              Starting Your Design-Related Business will give you the information you need to begin your very own business. From deciding a name through running an ethical business - it&amp;#39;s all covered. Included in this comprehensive training are:<br />
-              What to do before you begin: Writing a mission statement and business plan <br />
-              Determining your products and services<br />
-              How to price your services<br />
-              How to use estimates, proposals, and contracts<br />
-              The type of ownership appropriate for your business <br />
-              Determining registration and licensing requirements<br />
-              How to set up a home office<br />
-              Determining your insurance needs<br />
-              Understanding business law<br />
-              Establishing appropriate business policies<br />
-              How to establish a budget to stay in business<br />
-              Working with trade professionals<br />
-              Resources<br />
+            <h1>Starting Your Design-Related Business</h1>
+            <p class="course-description">A half-day workshop</p>
+            <p>Do you have the skills and passion necessary to begin your own business in interior decorating, or the fast-growing fields of interior redesign (also called one day decorating) or real estate staging (also called home staging), or any design-related business but you just aren't sure how to do it? <br />
+              <br />
+            Starting Your Design-Related Business will give you the information you need to begin your very own business. From deciding a name through running an ethical business - it's all covered. Included in this comprehensive training are:</p>
+            <ul>
+              <li>What to do before you begin: Writing a mission statement and business plan </li>
+              <li>Determining your products and services</li>
+              <li>How to price your services</li>
+              <li>How to use estimates, proposals, and contracts</li>
+              <li>The type of ownership appropriate for your business </li>
+              <li>Determining registration and licensing requirements</li>
+              <li>How to set up a home office</li>
+              <li>Determining your insurance needs</li>
+              <li>Understanding business law</li>
+              <li>Establishing appropriate business policies</li>
+              <li>How to establish a budget to stay in business</li>
+              <li>Working with trade professionals</li>
+              <li>Resources</li>
+            </ul>
+            <p><br />
               ...As well as a myriad of business forms that will keep you and your business organized.</p>
-            <p>With the step-by-step process provided, you will know exactly what needs to be done and in what order, but you can set the pace.  Whether you want to be in business in one month or one year or longer, you&amp;#39;ll be ready to go!</p>
+            <p>With the step-by-step process provided, you will know exactly what needs to be done and in what order, but you can set the pace.  Whether you want to be in business in one month or one year or longer, you'll be ready to go!</p>
             <p>To Enroll in the Starting Your Design Related Business:<br />
               Please note: Students enrolling in Starting Your Design Related Business must have completed a two or three day workshop through School of Interior Redesign LLC or an approved design program at another institution or been in business a minimum of six months.</p>
             <p>Cost for the half-day Starting Your Design-Related Business is $250.
