--- a/www/real-estate-staging-professional.htm
+++ b/www/real-estate-staging-professional.htm
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-<!-- InstanceBegin template="/Templates/SIR_page.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/SIR_page.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <!-- InstanceBeginEditable name="head-content" -->
@@ -56,43 +55,47 @@
           <td height="28" colspan="4"><img src="images/address_school_of_interior_redesign.jpg" height="13" border="0" usemap="#Map" /></td>
         </tr>
         <tr>
-          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" -->
-            <ul class="navbar">
-              <li><a href="index.htm">Home Page</a></li>
-              <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
-              <li><span class="node">Classes</span>
-                <ul>
-                  <li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
-                    <ul>
-                      <li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
-                      <li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
-                      <li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
-                    <ul>
-                      <li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
-                      <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
-                    <ul>
-                      <li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                      <li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
-                    </ul>
-                  </li>
+          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" --><ul class="navbar">
+          	<li><a href="index.htm">Home Page</a></li>
+<!--            <li><a href="../questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>-->
+            <li><span class="node">Classes</span> 
+            	<ul>
+					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
+                    	<ul>
+                        	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
+                        	<li><a href="interior-redesign-professional.htm">Redesign Intensive</a></li>
+                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    	<ul>
+<!--                        	<li><a href="../real-estate-staging-professional.htm">Staging for the Professional</a></li>-->
+                            <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    	<ul>
+                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
+                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional&reg;</a></li>
+                    	</ul>
+                    </li>
+					<li><a href="business-of-design.htm">The Business of Design</a>
+						<ul>
+						  <li><a href="starting-your-design-related-business.htm.html">Starting Your Design-Related Business</a></li>
+							<li><a href="marketing-your-design-related-business.htm">Marketing Your Design-Related Business</a></li>
+						</ul>
+					</li>
                 </ul>
-              </li>
-              <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
-              <li><a href="course-schedule.htm">Class Schedule</a></li>
-              <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
-              <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
-              <li><a href="payment.htm">Secure Online Payment</a></li>
-              <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
-              <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
-              <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-            </ul>
-            <!-- #EndLibraryItem --></td>
+            </li>
+            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+            <li><a href="course-schedule.htm">Class Schedule</a></li>
+<!--            <li><a href="../directions-school-redesign-staging.htm">Directions To The School</a></li>-->
+            <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
+            <li><a href="payment.htm">Secure Online Payment</a></li>
+            <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
+            <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
+            <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
+          </ul><!-- #EndLibraryItem --></td>
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
@@ -147,11 +150,9 @@
             </blockquote>
             <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
             <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
-            <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" -->
-            <p style="text-align:center;"><strong>For more information on any interior redesign training workshop</strong>,<br />
-              email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign at<br />
-              <strong>(203) 783-1556</strong> or <strong>(877) 814-0518</strong> toll-free.</p>
-            <!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
+            <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" --><p style="text-align:center;"><strong>For more information on any interior redesign training workshop</strong>,<br />
+email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign at<br />
+<strong>(203) 783-1556</strong> or <strong>(877) 814-0518</strong> toll-free.</p><!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
         </tr>
         <tr>
           <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
@@ -160,56 +161,22 @@
           <td height="20" align="left" valign="top">&nbsp;</td>
         </tr>
         <tr class="affiliates">
-          <td height="100" align="center" valign="middle" colspan="4"><a href="http://www.associationofdesigneducation.com" target="_blank"><img src="images/logo_ADE.jpg" alt="Ann Anderson, Founder and Director of the School of Interior Redesign, is a member of ADE, the Association of Design Education, an organization of professionals who teach interior decorating, interior redesign, one day decorating, home staging and real estate staging." height="70" hspace="14" border="0" /></a> <a href="http://www.networkofexecutivewomen.org" target="_blank"><img src="images/newlogo_transp.gif" width="121" height="68" hspace="14" border="0" /></a> <a href="http://www.interiordesignsociety.org/" target="_blank"><img src="images/logo_ids.jpg" alt="Ann Anderson, a graduate of the Sheffield School of Interior Design and a Certified Interior Redesign Specialist, is a member of IDS, the Interior Design Society." width="95" height="70" hspace="14" border="0" /></a></td>
+			<td height="100" align="center" valign="middle" colspan="4">
+                <a href="http://www.associationofdesigneducation.com" target="_blank"><img src="images/logo_ADE.jpg" alt="Ann Anderson, Founder and Director of the School of Interior Redesign, is a member of ADE, the Association of Design Education, an organization of professionals who teach interior decorating, interior redesign, one day decorating, home staging and real estate staging." height="70" hspace="14" border="0" /></a>
+                <a href="http://www.networkofexecutivewomen.org" target="_blank"><img src="images/newlogo_transp.gif" width="121" height="68" hspace="14" border="0" /></a>
+                <a href="http://www.interiordesignsociety.org/" target="_blank"><img src="images/logo_ids.jpg" alt="Ann Anderson, a graduate of the Sheffield School of Interior Design and a Certified Interior Redesign Specialist, is a member of IDS, the Interior Design Society." width="95" height="70" hspace="14" border="0" /></a>
+            </td>
         </tr>
         <tr>
-          <td colspan="4" class="footer"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" -->
-            <ul class="navbar">
-              <li><a href="index.htm">Home Page</a></li>
-              <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
-              <li><span class="node">Classes</span>
-                <ul>
-                  <li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
-                    <ul>
-                      <li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
-                      <li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
-                      <li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
-                    <ul>
-                      <li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
-                      <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
-                    <ul>
-                      <li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                      <li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
-              <li><a href="course-schedule.htm">Class Schedule</a></li>
-              <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
-              <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
-              <li><a href="payment.htm">Secure Online Payment</a></li>
-              <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
-              <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
-              <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-            </ul>
-            <!-- #EndLibraryItem -->
-            <div align="left"><a class="footer" href="#top">Return to top of page</a></div></td>
+          <td colspan="4" class="footer"><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
+          </td>
         </tr>
       </table></td>
   </tr>
 </table>
-<p align="center" class="footer">Copyright &copy; 2004-2016 School of Interior Redesign, LLC.&nbsp; All rights reserved.<br />
-  Website design by H.B. Moser, A Certified Internet Webmaster</p>
+<p align="center" class="footer">Copyright &copy; 2004-2019 School of Interior Redesign, LLC.&nbsp;All rights reserved.<br/></p>
 <map name="Map" id="Map">
   <area shape="rect" coords="411,0,625,14" href="mailto:info@schoolofinteriorredesign.com" />
 </map>
 </body>
-<!-- InstanceEnd -->
-</html>
+<!-- InstanceEnd --></html>
